--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,11 @@
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=app/js
-config.folder=${file.reference.Mobile-config}
+config.folder=${file.reference.mobile-config}
 file.reference.Mobile-app=app
+file.reference.mobile-app=app
 file.reference.Mobile-config=config
+file.reference.mobile-config=config
 file.reference.Mobile-test=test
+file.reference.mobile-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.Mobile-app}
-test.folder=${file.reference.Mobile-test}
+test.folder=${file.reference.mobile-test}
