--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,5 +7,5 @@ file.reference.mobile-config=config
 file.reference.Mobile-test=test
 file.reference.mobile-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.Mobile-app}
-test.folder=${file.reference.mobile-test}
+site.root.folder=${file.reference.mobile-app}
+test.folder=
